// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable with ripple effect disables foreground in borderless mode 1`] = `
<DummyTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits="button"
  borderlessRipple={true}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
  style={null}
  useForeground={false}
>
  <Component>
    <Translation
      passThrough="line"
    />
  </Component>
</DummyTouchableNativeFeedback>
`;

exports[`Touchable with ripple effect is possible to turn ripple effect off 1`] = `
<TouchableOpacity
  accessibilityComponentType="button"
  accessibilityTraits="button"
  activeOpacity={0.5}
  borderlessRipple={false}
  disabled={false}
  noRipple={true}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <Translation
    passThrough="line"
  />
</TouchableOpacity>
`;

exports[`Touchable with ripple effect renders with foreground 1`] = `
<DummyTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits="button"
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
  style={null}
  useForeground={true}
>
  <Component>
    <Translation
      passThrough="line"
    />
  </Component>
</DummyTouchableNativeFeedback>
`;

exports[`Touchable with ripple effect renders with ripple color 1`] = `
<DummyTouchableNativeFeedback
  accessibilityComponentType="button"
  accessibilityTraits="button"
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="red"
  style={null}
  useForeground={true}
>
  <Component>
    <Translation
      passThrough="line"
    />
  </Component>
</DummyTouchableNativeFeedback>
`;
